// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should correctly render recipe 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mx1"
    onClick={[Function]}
    role="presentation"
  >
    ⬜️
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;

exports[`<RecipeListItem /> Should not break if no recipe passed  1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mx1"
    onClick={[Function]}
    role="presentation"
  >
    ⬜️
  </span>
  <span />
  <span />
</li>
`;

exports[`<RecipeListItem /> Should render favorite state in list 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mx1"
    onClick={[Function]}
    role="presentation"
  >
    ✅
  </span>
  <span>
    Test Recipe
  </span>
  <span>
    Test Category
  </span>
</li>
`;
